--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+
 flask
 flask_sqlalchemy
 pandas
 openpyxl
 nest_asyncio
 urllib3
-six
-python-telegram-bot==20.3
+python-telegram-bot==13.15
+apscheduler
