--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-
 flask
 flask_sqlalchemy
 pandas
 openpyxl
 nest_asyncio
 urllib3
-python-telegram-bot==13.15
-apscheduler
+six
+python-telegram-bot==20.3
